apps/base/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: apps
  labels:
    app: mongo-express
spec:
  selector:
    app: mongo-express
  ports:
  - port: 8081
    targetPort: 8081
    name: http
